mon premier commit

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       <p>
         Lorem ipsum dolor sit amet <br>
         consectetur adipisicing elit. <br>
-        Nesciunt recusandae amet quo et, <br> 
+        Nesciunt recuREDAsandae amet quo et, <br> 
         qui incidunt ad! Dolor aperiam enim, <br>
         sint rem est at, pariatur placeat possimus <br>
         eaque, veritatis esse nesciunt.
