--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
   <header>
+   
+  <nav class="aicha">
     <img src="image/ParBa.png" alt="">
-  <nav class="">
+
       <ul>
           <li><a href="#">Accueil</a></li>
           <li><a href="#">A propos</a></li>
@@ -17,7 +19,11 @@
           <li><a href="#">Témoignage</a></li>
           <li><a href="#">Contact</a></li>
       </ul>  
-        <p>connexion  inscription</p>
+      <p>
+        <a class="photo" href="">Connexion</a>
+        <a class="photo" href="">Inscription</a>
+      </p>
+
 </nav>
 </header>
 <div class="ligne"></div>
@@ -66,17 +72,17 @@
       </p></center>
     </main>
     <center>
-    <center> <div class="horizontal-line"></div></button></center>
+    <center> <div class="horizontal-line"></div></center>
     <center><h1>Nos partenaires</h1></center>
     <div class="par">
-    <img src="image/WhatsApp Image 2024-02-14 à 15.20.30_ed56502e.jpg" alt="">
+      <img src="image/WhatsApp Image 2024-02-14 à 15.20.30_ed56502e.jpg" alt="">
       <img src="image/BOOSTER LOGO-2.png" alt="">
       <img src="image/BOOSTER LOGO.png"alt="">
       <img src="image/defarsci-removebg-preview.png" alt="">
       <img src="image/WhatsApp Image 2024-02-14 à 15.20.30_e290094b.jpg" alt="">
     </center>
   </div>
-  <center> <div class="horizontal-line"></div></button></center>
+  <center> <div class="horizontal-line"></div></center>
   <center><h1>Ils nous font confiance !</h1></center>
   <center>
     <div class="element">
@@ -147,7 +153,7 @@
       <p>
         Lorem ipsum dolor sit amet <br>
         consectetur adipisicing elit. <br>
-        Nesciunt recuREDAsandae amet quo et, <br> 
+        Nesciunt recusandae amet quo et, <br> 
         qui incidunt ad! Dolor aperiam enim, <br>
         sint rem est at, pariatur placeat possimus <br>
         eaque, veritatis esse nesciunt.
